--- a/MineSweeper/MineSweeper.html
+++ b/MineSweeper/MineSweeper.html
@@ -11,7 +11,10 @@
     <table>
         <tbody data-bind="foreach: Rows">
             <tr data-bind="foreach: Cols">
-                <td><a data-bind="click: cellClick, event: {contextmenu: cellClick }"><span data-bind="element: $element, text: nieghborMineCount" class="cell coverred">.</span></a></td>
+                <td><a data-bind="click: cellClick, event: {contextmenu: cellClick }">
+                        <span data-bind="element: $element, text: nieghborMineCount, css: cssClass">.</span>
+                    </a>
+                </td>
         </tbody>
     </table>
     <script type="text/javascript">
@@ -55,8 +58,37 @@
                         mineCount++;
                     }
                 });
+                mineCount = (mineCount > 0 && !self.isCoverred()) ? "" + mineCount : "";
                 return mineCount;
             }, self, { deferEvaluation: true });
+
+            self.mineCountCss = ko.computed(function () {
+                var nmc = self.nieghborMineCount();
+                var css = (nmc > 0) ? "count" + nmc : "";
+                if (nmc > 0) {
+                    $(self.element()).addClass(css);
+                }
+                return css;
+            }, self, { deferEvaluation: true });
+
+            self.cssClass = ko.computed(function(){
+                var css = "cell";
+                if (self.isCoverred()){
+                    if (self.isFlagged()){
+                        css += " flagged";
+                    } else {
+                        css += " coverred";
+                    }
+                } else {
+                    if (self.hasMine()){
+                        css += " exploded";
+                    } else {
+                        css += " uncoverred " + self.mineCountCss();
+                    }
+                }
+
+                return css;
+            }, self, { deferEvaluation: true});
 
             self.cellClick = function (cell, evt) {
                 //alert("Btn: " + evt.which + ", Shft: " + evt.shiftKey + ", Ctrl: " + evt.ctrlKey);
